# rodrigob-totally_corrective_boosting

./: .hgignore  license.txt  readme.text
data/: a9a.test  a9a.train  a9a.valid
libs/lbfgsb/: lbfgsb.cpp  lbfgsb.h  license
libs/lbfgsb/ap/: ap.cpp
src/: AbstractBooster.cpp  AbstractBooster.hpp  AbstractOptimizer.cpp  AbstractOptimizer.hpp  AbstractOracle.hpp  AdaBoost.cpp  AdaBoost.hpp  ConfigFile.cpp  ConfigFile.hpp  CoordinateDescentOptimizer.cpp  CoordinateDescentOptimizer.hpp  CorrectiveBoost.cpp  CorrectiveBoost.hpp  DecisionStump.cpp  DecisionStump.hpp  DecisionStumpWeakLearner.cpp  DecisionStumpWeakLearner.hpp  Ensemble.cpp  Ensemble.hpp  ErlpBoost.cpp  ErlpBoost.hpp  EvaluateLoss.cpp  EvaluateLoss.hpp  LbfgsbOptimizer.cpp  LbfgsbOptimizer.hpp  LibSvmReader.cpp  LibSvmReader.hpp  LpBoost.cpp  LpBoost.hpp  ProjectedGradientOptimizer.cpp  ProjectedGradientOptimizer.hpp  RawDataOracle.cpp  RawDataOracle.hpp  Svm.cpp  Svm.hpp  TaoOptimizer.cpp  TaoOptimizer.hpp  Timer.cpp  Timer.hpp  WeakLearner.cpp  (+57 more)
src/applications/test_erlpboost/: CMakeLists.txt  test_erlpboost.config.ini  test_erlpboost.cpp
src/boosters/: AbstractBooster.cpp  AbstractBooster.hpp  AdaBoost.cpp  AdaBoost.hpp  CorrectiveBoost.cpp  CorrectiveBoost.hpp  ErlpBoost.cpp  ErlpBoost.hpp  LpBoost.cpp  LpBoost.hpp  boosters_factory.cpp  boosters_factory.hpp  tKlBoost.cpp  tKlBoost.hpp
src/lbfgsb/: lbfgsb.cpp  lbfgsb.h
src/math/: dense_integer_vector.cpp  dense_integer_vector.hpp  dense_vector.cpp  dense_vector.hpp  sparse_vector.cpp  sparse_vector.hpp  vector_operations.cpp  vector_operations.hpp
src/optimizers/: AbstractOptimizer.cpp  AbstractOptimizer.hpp  CoordinateDescentOptimizer.cpp  CoordinateDescentOptimizer.hpp  LbfgsbOptimizer.cpp  LbfgsbOptimizer.hpp  ProjectedGradientOptimizer.cpp  ProjectedGradientOptimizer.hpp  TaoOptimizer.hpp  ZhangdAndHagerOptimizer.cpp  ZhangdAndHagerOptimizer.hpp  optimizers_factory.cpp  optimizers_factory.hpp
src/oracles/: AbstractOracle.cpp  AbstractOracle.hpp  DecisionStump.cpp  DecisionStump.hpp  RawDataOracle.cpp  RawDataOracle.hpp  Svm.cpp  Svm.hpp  oracles_factory.cpp  oracles_factory.hpp
src/weak_learners/: AbstractWeakLearner.cpp  AbstractWeakLearner.hpp  DecisionStumpWeakLearner.cpp  DecisionStumpWeakLearner.hpp  LinearWeakLearner.cpp  LinearWeakLearner.hpp  WeakLearner.cpp  WeakLearner.hpp  WeightedWeakLearner.cpp  WeightedWeakLearner.hpp
tools/: ida_benchmark_to_libsvm_file_format.py  print_configs.py  process_data.py  readme.text
